@@ -1,6 +1,6 @@
 # Process this file with autoconf to produce a configure script.
-AC_INIT(QComicBook, 0.1.6, yogin@linux.bydg.org)
-AM_INIT_AUTOMAKE(qcomicbook, 0.1.6)
+AC_INIT(QComicBook, 0.1.7, yogin@linux.bydg.org)
+AM_INIT_AUTOMAKE(qcomicbook, 0.1.7)
 AC_CONFIG_HEADERS([src/config.h])
 AC_PREFIX_DEFAULT([/usr/local])
 
