@@ -25,6 +25,7 @@ menu option. These options include:
 	<li>Scaling method - the algorithm used for image scaling; either <i>Smooth</i> or
 	    <i>Fast</i>. Smooth scaling provides best quality, but is slower; it is recommened method
 	    unless you have really slow machine.
+	<li>Info text font - font used for Info dialog.
 	 <li>Cache size - the number of pages kept in memory. Value of 0 disables caching; 1 has no effect
 	    on performance; 2 or more may improve your experience. Keep in mind, that caching may consume a lot
 	    of memory - for example, an 1280x1984 image may take as much as 9Mb of memory!
